--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="container header">
+    <header class="header">
         <img src="media/logo.svg" alt="">
         <div class="header__btns">
             <a href="#" class="header__btn">О НАС</a>
