--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
             <img src="media/logo.svg" alt="" class="header__logo">
         </a>
 
-
         <div class="header__nav">
-            <a href="#">О НАС</a>
-            <a href="#">КОМАНДА</a>
+            <a href="whoweare">О НАС</a>
             <a href="#">КУРСЫ</a>
             <a href="#">ВИДЕО</a>
-            <a href="#">КОНТАКТЫ</a>
+            <a href="#">КОМАНДА</a>
             <a href="#">FAQ</a>
+            <a href="#">КОНТАКТЫ</a>
         </div>
 
         <button class="button header__auth">
@@ -41,6 +40,163 @@
         </button>
 
     </header>
+
+    <section class="container sec__main">
+        <div class="sec__main__left">
+            <h1 class="sec__main__title bold">
+                <span>Ц</span>ентр
+                <span>Д</span>ополнительного
+                <br>
+                <span>О</span>бразования
+                <span>Д</span>етей
+            </h1>
+            <p class="sec__main__line" style="width: 50%"></p>
+            <p class="sec__main__desc">при кафедре САПРиПК <br> и ЦМИТ «ЛЮКС», ВолгГТУ</p>
+            <p class="sec__main__slog semibold">Изобретай будущее с нами!</p>
+            <p class="sec__main__line" style="width: 35%"></p>
+            <button class="button"><span>Записаться</span></button>
+        </div>
+        <img class="sec__main__right" src="media/main_classroom.svg" alt="">
+    </section>
+
+    <section class="whoweare" id="whoweare">
+        <div class="container whoweare__inner">
+            <img class="whoweare__img" src="media/who_are_we.svg" alt="">
+            <div class="whoweare__text">
+                <h2>Что такое <span>ЦДОД</span>?</h2>
+                <p>Мы предоставляем доступ молодым учёным и школьникам, начиная с первого класса, к самым современным
+                    инструментам и подходам для производства сложных систем с использованием аддитивных технологий.</p>
+                <p>Наша основная цель - пробудить интерес детей и молодежи к естественным наукам и современным
+                    технологиям, научно-исследовательской и инновационной деятельности.</p>
+                <p>Вас ждут творческая атмосфера, командная работа и дружный коллектив, индивидуальный подход,
+                    выстраивание образовательной траектории детей, а также участие в творческих и научно-технических
+                    конкурсах!</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="wedo">
+        <div class="container wedo__inner">
+            <div class="wedo__first">
+                <div class="wedo__item">
+                    <i class="icon-vec1"></i>
+                    <p>
+                        <bold>Вовлекаем</bold> ребёнка в круг детей со схожими интересами
+                    </p>
+                </div>
+                <div class="wedo__item">
+                    <i class="icon-vec2"></i>
+                    <p>
+                        <bold>Готовим</bold> к творческим и научно-техническим соревнованиям и конкурсам
+                    </p>
+                </div>
+                <div class="wedo__item">
+                    <i class="icon-vec3"></i>
+                    <p>
+                        <bold>Выстраиваем</bold> образовательную траекторию ребёнка
+                    </p>
+                </div>
+            </div>
+            <div class="wedo__first wedo__second">
+                <div class="wedo__item">
+                    <i class="icon-vec4"></i>
+                    <p>
+                        <bold>Выявляем</bold> предрасположенности и таланты в IT
+                    </p>
+                </div>
+                <div class="wedo__item">
+                    <i class="icon-vec5"></i>
+                    <p>
+                        <bold>Придаём</bold> уверенности в себе и своих возможностях
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="courses">
+        <p class="courses__background"> </p>
+        <div class="container courses__inner">
+            <h2>Курсы</h2>
+            <div class="courses__cards">
+                <div class="courses__card c__python">
+                    <div class="courses__card__img">
+                        <img src="media/courses/python.svg" alt="">
+                    </div>
+                    <p>Программирование
+                        <br>
+                        на языке Python
+                    </p>
+                    <p>с 12 лет</p>
+                    <div class="courses__card__buttons">
+                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button2"><span>Записаться</span></button>
+                    </div>
+                </div>
+                <div class="courses__card c__robo">
+                    <div class="courses__card__img">
+                        <img src="media/courses/robotics.svg" alt="">
+                    </div>
+                    <p>Робототехника</p>
+                    <p>с 8 до 15 лет</p>
+                    <div class="courses__card__buttons">
+                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button2"><span>Записаться</span></button>
+                    </div>
+                </div>
+                <div class="courses__card c__3d">
+                    <div class="courses__card__img">
+                        <img src="media/courses/3dsMax.svg" alt="">
+                    </div>
+                    <p>3D графика + анимация</p>
+                    <p>с 11 лет</p>
+                    <div class="courses__card__buttons">
+                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button2"><span>Записаться</span></button>
+                    </div>
+                </div>
+            </div>
+            <div class="courses__cards">
+                <div class="courses__card c__sharp">
+                    <div class="courses__card__img">
+                        <img src="media/courses/Csharp.svg" alt="">
+                    </div>
+                    <p>Программирование на языке
+                        <br>
+                        C# (Си Шарп)
+                    </p>
+                    <p>с 12 лет</p>
+                    <div class="courses__card__buttons">
+                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button2"><span>Записаться</span></button>
+                    </div>
+                </div>
+                <div class="courses__card c__android">
+                    <div class="courses__card__img">
+                        <img src="media/courses/android.svg" alt="">
+                    </div>
+                    <p>Разработка мобильных<br>приложений под Android</p>
+                    <p>с 12 лет</p>
+                    <div class="courses__card__buttons">
+                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button2"><span>Записаться</span></button>
+                    </div>
+                </div>
+                <div class="courses__card c__2d">
+                    <div class="courses__card__img">
+                        <img src="media/courses/adobe_animate.svg" alt="">
+                    </div>
+                    <p>2D графика + анимация</p>
+                    <p>с 10 лет</p>
+                    <div class="courses__card__buttons">
+                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button2"><span>Записаться</span></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="script.js"></script>
 </body>
