--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </a>
 
         <div class="header__nav">
-            <a href="whoweare">О НАС</a>
-            <a href="#">КУРСЫ</a>
+            <a href="#whoweare">О НАС</a>
+            <a href="#courses">КУРСЫ</a>
             <a href="#">ВИДЕО</a>
             <a href="#">КОМАНДА</a>
             <a href="#">FAQ</a>
@@ -114,7 +114,7 @@
         </div>
     </section>
 
-    <section class="courses">
+    <section id="courses" class="courses">
         <p class="courses__background"> </p>
         <div class="container courses__inner">
             <h2>Курсы</h2>
