--- a/index.html
+++ b/index.html
@@ -197,6 +197,151 @@
         </div>
     </section>
 
+    <section class="videos">
+        <div class="container videos__inner">
+            <h2>Ждём Вас на наших занятиях!</h2>
+            <!-- width="560" height="315" -->
+            <div class="videos__items">
+                <iframe class="ytvideo" src="https://www.youtube.com/embed/4czkauoI5KQ" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <iframe class="ytvideo" src="https://www.youtube.com/embed/k5d6el1VYCY" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <iframe class="ytvideo" src="https://www.youtube.com/embed/OFW7cGD3dOI" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+    <section class="faqq">
+        <div class="container faqq__inner">
+            <h2>Часто задаваемые вопросы</h2>
+            <div class="faqq__accordions">
+                <div class="accordion accordion__active">
+                    <div class="accordion__head">
+                        <img src="media/icons/open_close.svg" alt="">
+                        <p class="accordion__title">Как оформить ребенка на курсы? Какие документы нужны для оформления?
+                        </p>
+                    </div>
+                    <div class="accordion__content">
+                        <div class="accordion__line"></div>
+                        <p>Для оформления ребенка на курсы необходимо составить договор на оказание услуг с ВолгГТУ.
+                            Договор оформляется с родителями, для его оформления нужен паспорт одного из родителей или
+                            законного представителя ребенка.</p>
+                    </div>
+                </div>
+
+                <div class="accordion">
+                    <div class="accordion__head">
+                        <img src="media/icons/open_close.svg" alt="">
+                        <p class="accordion__title">Справится ли ребенок? Нужны ли базовые знания?
+                        </p>
+                    </div>
+                    <div class="accordion__content">
+                        <div class="accordion__line"></div>
+                        <p>Группы комплектуются в соответствии с возрастом (младшая группа: 8-10, средняя группа: 11-14,
+                            и старшая группа: 14-18. В соответствии с возрастом адаптируется программа курса,
+                            предусматриваются дополнительные перерывы и мероприятия для общего развития и подготовки к
+                            работе с программным обеспечением.</p>
+                    </div>
+                </div>
+
+                <div class="accordion">
+                    <div class="accordion__head">
+                        <img src="media/icons/open_close.svg" alt="">
+                        <p class="accordion__title">Что приносить с собой на занятия?
+                        </p>
+                    </div>
+                    <div class="accordion__content">
+                        <div class="accordion__line"></div>
+                        <div>
+                            <p style="font-weight: 500;">• Для посещения занятий ничего не требуется.</p>
+                            <p>• При желании можно приносить ноутбук, наши специалисты установят на него программное
+                                обеспечение курса и ребенок сможет заниматься дополнительно дома.</p>
+                            <p>• В холодное время года для комфорта ребенка желательно приносить сменную обувь.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion">
+                    <div class="accordion__head">
+                        <img src="media/icons/open_close.svg" alt="">
+                        <p class="accordion__title">Какой документ выдается по окончанию курсов?
+                        </p>
+                    </div>
+                    <div class="accordion__content">
+                        <div class="accordion__line"></div>
+                        <p>По окончании курсов, в случае регулярного посещения и полной оплаты стоимости курсов,
+                            выдается сертификат об освоении дополнительной образовательной программы.</p>
+                    </div>
+                </div>
+
+                <div class="accordion">
+                    <div class="accordion__head">
+                        <img src="media/icons/open_close.svg" alt="">
+                        <p class="accordion__title">Что делать, если ребенок заболел? Как компенсировать пропущенные
+                            занятия?
+                        </p>
+                    </div>
+                    <div class="accordion__content">
+                        <div class="accordion__line"></div>
+                        <p>Отсутствие на одном и более занятиях компенсируется за счет уплотнения графика обучения, т.е.
+                            за счёт посещения занятий параллельных групп (в случае их наличия).</p>
+                    </div>
+                </div>
+
+                <div class="accordion">
+                    <div class="accordion__head">
+                        <img src="media/icons/open_close.svg" alt="">
+                        <p class="accordion__title">Если ребенок больше не сможет посещать занятия, можно ли вернуть за
+                            них деньги?
+                        </p>
+                    </div>
+                    <div class="accordion__content">
+                        <div class="accordion__line"></div>
+                        <p>Возврат возможен с даты отчисления ребенка по заявлению родителей с просьбой расторгнуть
+                            договор.</p>
+                    </div>
+                </div>
+
+                <div class="accordion">
+                    <div class="accordion__head">
+                        <img src="media/icons/open_close.svg" alt="">
+                        <p class="accordion__title">Есть ли какие-либо скидки или льготы для учащихся?
+                        </p>
+                    </div>
+                    <div class="accordion__content">
+                        <div class="accordion__line"></div>
+                        <p>На текущий момент скидки и льготы не предусмотрены.</p>
+                    </div>
+                </div>
+
+                <div class="accordion">
+                    <div class="accordion__head">
+                        <img src="media/icons/open_close.svg" alt="">
+                        <p class="accordion__title">Есть ли образовательная лицензия?
+                        </p>
+                    </div>
+                    <div class="accordion__content">
+                        <div class="accordion__line"></div>
+                        <p>Обучение проходит в опорном университете. У ВУЗа бессрочная образовательная <a
+                                style="text-decoration: underline; color: var(--blue);"
+                                href="http://www.vstu.ru/upload/sveden/document/Pril1_licen_VSTU_07.10.16.pdf">
+                                <semibold>лицензия <i style="font-size: 2rem;" class="icon-attach"></i></semibold>
+                            </a> для обучения взрослых и детей (стр. 11). </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
 
     <script src="script.js"></script>
 </body>
