--- a/index.html
+++ b/index.html
@@ -218,129 +218,221 @@
         </div>
     </section>
 
+
+
+    <section class="team">
+        <div class="container team__inner">
+            <h2>Команда</h2>
+            <p>В нашей команде энергичные и целеустремленные профессионалы своего дела, использующие творческий подход и
+                обладающие нестандартным мышлением, обширными практическими знаниями и опытом работы в различных
+                отраслях программирования, гейм-дизайна, робо-инженерии и искуственного интеллекта.</p>
+            <div class="team__cards">
+                <div class="team__card">
+                    <img src="media/team/Щербаков.jpg" alt="">
+                    <p>Щербаков Максим Владимирович</p>
+                    <p>д.т.н., директор ЦДОД, заведующий кафедрой САПРиПК</p>
+                </div>
+                <div class="team__card">
+                    <img src="media/team/Щербакова.jpg" alt="">
+                    <p>Щербакова Наталия Львовна</p>
+                    <p>к.т.н. , доцент кафедры Физика, ведущий инженер ЦМИТ ЛЮКС</p>
+                </div>
+                <div class="team__card">
+                    <img src="media/team/Матохина.jpg" alt="">
+                    <p>Матохина Анна Владимировна</p>
+                    <p>к.т.н. , доцент кафедры САПРиПК, директор ЦМИТ ЛЮКС</p>
+                </div>
+            </div>
+            <div class="team__cards">
+                
+                <div class="team__card">
+                    <img src="media/team/Пеньковская.jpg" alt="">
+                    <p>Пеньковская Анна Владимировна</p>
+                    <p>менеджер ЦДОД</p>
+                </div>
+                <div class="team__card">
+                    <img src="media/team/Козина.jpg" alt="">
+                    <p>Козина Светлана Александровна</p>
+                    <p>менеджер ЦДОД</p>
+                </div>~
+            </div>
+        </div>
+    </section>
+
+
     <section class="faqq">
         <div class="container faqq__inner">
+
             <h2>Часто задаваемые вопросы</h2>
-            <div class="faqq__accordions">
-                <div class="accordion accordion__active">
-                    <div class="accordion__head">
-                        <img src="media/icons/open_close.svg" alt="">
-                        <p class="accordion__title">Как оформить ребенка на курсы? Какие документы нужны для оформления?
-                        </p>
-                    </div>
-                    <div class="accordion__content">
-                        <div class="accordion__line"></div>
-                        <p>Для оформления ребенка на курсы необходимо составить договор на оказание услуг с ВолгГТУ.
-                            Договор оформляется с родителями, для его оформления нужен паспорт одного из родителей или
-                            законного представителя ребенка.</p>
-                    </div>
-                </div>
 
-                <div class="accordion">
-                    <div class="accordion__head">
-                        <img src="media/icons/open_close.svg" alt="">
-                        <p class="accordion__title">Справится ли ребенок? Нужны ли базовые знания?
-                        </p>
-                    </div>
-                    <div class="accordion__content">
-                        <div class="accordion__line"></div>
-                        <p>Группы комплектуются в соответствии с возрастом (младшая группа: 8-10, средняя группа: 11-14,
-                            и старшая группа: 14-18. В соответствии с возрастом адаптируется программа курса,
-                            предусматриваются дополнительные перерывы и мероприятия для общего развития и подготовки к
-                            работе с программным обеспечением.</p>
-                    </div>
-                </div>
 
-                <div class="accordion">
-                    <div class="accordion__head">
-                        <img src="media/icons/open_close.svg" alt="">
-                        <p class="accordion__title">Что приносить с собой на занятия?
-                        </p>
+            <div class="faqq__contents">
+                <div class="faqq__accordions">
+                    <div class="accordion accordion__active">
+                        <div class="accordion__head">
+                            <img src="media/icons/open_close.svg" alt="">
+                            <p class="accordion__title">Как оформить ребенка на курсы? Какие документы нужны для
+                                оформления?
+                            </p>
+                        </div>
+                        <div class="accordion__content">
+                            <div class="accordion__line"></div>
+                            <p>Для оформления ребенка на курсы необходимо составить договор на оказание услуг с ВолгГТУ.
+                                Договор оформляется с родителями, для его оформления нужен паспорт одного из родителей
+                                или
+                                законного представителя ребенка.</p>
+                        </div>
                     </div>
-                    <div class="accordion__content">
-                        <div class="accordion__line"></div>
-                        <div>
-                            <p style="font-weight: 500;">• Для посещения занятий ничего не требуется.</p>
-                            <p>• При желании можно приносить ноутбук, наши специалисты установят на него программное
-                                обеспечение курса и ребенок сможет заниматься дополнительно дома.</p>
-                            <p>• В холодное время года для комфорта ребенка желательно приносить сменную обувь.</p>
+                    <div class="accordion">
+                        <div class="accordion__head">
+                            <img src="media/icons/open_close.svg" alt="">
+                            <p class="accordion__title">Справится ли ребенок? Нужны ли базовые знания?
+                            </p>
+                        </div>
+                        <div class="accordion__content">
+                            <div class="accordion__line"></div>
+                            <p>Группы комплектуются в соответствии с возрастом (младшая группа: 8-10, средняя группа:
+                                11-14,
+                                и старшая группа: 14-18. В соответствии с возрастом адаптируется программа курса,
+                                предусматриваются дополнительные перерывы и мероприятия для общего развития и подготовки
+                                к
+                                работе с программным обеспечением.</p>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__head">
+                            <img src="media/icons/open_close.svg" alt="">
+                            <p class="accordion__title">Что приносить с собой на занятия?
+                            </p>
+                        </div>
+                        <div class="accordion__content">
+                            <div class="accordion__line"></div>
+                            <div>
+                                <p style="font-weight: 500;">Для посещения занятий ничего не требуется.</p>
+                                <p>При желании можно приносить ноутбук, наши специалисты установят на него программное
+                                    обеспечение курса и ребенок сможет заниматься дополнительно дома.</p>
+                                <p>В холодное время года для комфорта ребенка желательно приносить сменную обувь.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__head">
+                            <img src="media/icons/open_close.svg" alt="">
+                            <p class="accordion__title">Какой документ выдается по окончанию курсов?
+                            </p>
+                        </div>
+                        <div class="accordion__content">
+                            <div class="accordion__line"></div>
+                            <p>По окончании курсов, в случае регулярного посещения и полной оплаты стоимости курсов,
+                                выдается сертификат об освоении дополнительной образовательной программы.</p>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__head">
+                            <img src="media/icons/open_close.svg" alt="">
+                            <p class="accordion__title">Что делать, если ребенок заболел? Как компенсировать пропущенные
+                                занятия?
+                            </p>
+                        </div>
+                        <div class="accordion__content">
+                            <div class="accordion__line"></div>
+                            <p>Отсутствие на одном и более занятиях компенсируется за счет уплотнения графика обучения,
+                                т.е.
+                                за счёт посещения занятий параллельных групп (в случае их наличия).</p>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__head">
+                            <img src="media/icons/open_close.svg" alt="">
+                            <p class="accordion__title">Если ребенок больше не сможет посещать занятия, можно ли вернуть
+                                за
+                                них деньги?
+                            </p>
+                        </div>
+                        <div class="accordion__content">
+                            <div class="accordion__line"></div>
+                            <p>Возврат возможен с даты отчисления ребенка по заявлению родителей с просьбой расторгнуть
+                                договор.</p>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__head">
+                            <img src="media/icons/open_close.svg" alt="">
+                            <p class="accordion__title">Есть ли какие-либо скидки или льготы для учащихся?
+                            </p>
+                        </div>
+                        <div class="accordion__content">
+                            <div class="accordion__line"></div>
+                            <p>На текущий момент скидки и льготы не предусмотрены.</p>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__head">
+                            <img src="media/icons/open_close.svg" alt="">
+                            <p class="accordion__title">Есть ли образовательная лицензия?
+                            </p>
+                        </div>
+                        <div class="accordion__content">
+                            <div class="accordion__line"></div>
+                            <p>Обучение проходит в опорном университете. У ВУЗа бессрочная образовательная <a
+                                    target="_blank"
+                                    href="http://www.vstu.ru/upload/sveden/document/Pril1_licen_VSTU_07.10.16.pdf">
+                                    лицензия
+                                    <i style="font-size: 2rem;" class="icon-attach"></i> </a> для обучения взрослых и
+                                детей
+                                (стр. 11). </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="accordion">
-                    <div class="accordion__head">
-                        <img src="media/icons/open_close.svg" alt="">
-                        <p class="accordion__title">Какой документ выдается по окончанию курсов?
-                        </p>
-                    </div>
-                    <div class="accordion__content">
-                        <div class="accordion__line"></div>
-                        <p>По окончании курсов, в случае регулярного посещения и полной оплаты стоимости курсов,
-                            выдается сертификат об освоении дополнительной образовательной программы.</p>
-                    </div>
-                </div>
-
-                <div class="accordion">
-                    <div class="accordion__head">
-                        <img src="media/icons/open_close.svg" alt="">
-                        <p class="accordion__title">Что делать, если ребенок заболел? Как компенсировать пропущенные
-                            занятия?
-                        </p>
-                    </div>
-                    <div class="accordion__content">
-                        <div class="accordion__line"></div>
-                        <p>Отсутствие на одном и более занятиях компенсируется за счет уплотнения графика обучения, т.е.
-                            за счёт посещения занятий параллельных групп (в случае их наличия).</p>
-                    </div>
-                </div>
-
-                <div class="accordion">
-                    <div class="accordion__head">
-                        <img src="media/icons/open_close.svg" alt="">
-                        <p class="accordion__title">Если ребенок больше не сможет посещать занятия, можно ли вернуть за
-                            них деньги?
-                        </p>
-                    </div>
-                    <div class="accordion__content">
-                        <div class="accordion__line"></div>
-                        <p>Возврат возможен с даты отчисления ребенка по заявлению родителей с просьбой расторгнуть
-                            договор.</p>
-                    </div>
-                </div>
-
-                <div class="accordion">
-                    <div class="accordion__head">
-                        <img src="media/icons/open_close.svg" alt="">
-                        <p class="accordion__title">Есть ли какие-либо скидки или льготы для учащихся?
-                        </p>
-                    </div>
-                    <div class="accordion__content">
-                        <div class="accordion__line"></div>
-                        <p>На текущий момент скидки и льготы не предусмотрены.</p>
-                    </div>
-                </div>
-
-                <div class="accordion">
-                    <div class="accordion__head">
-                        <img src="media/icons/open_close.svg" alt="">
-                        <p class="accordion__title">Есть ли образовательная лицензия?
-                        </p>
-                    </div>
-                    <div class="accordion__content">
-                        <div class="accordion__line"></div>
-                        <p>Обучение проходит в опорном университете. У ВУЗа бессрочная образовательная <a
-                                style="text-decoration: underline; color: var(--blue);"
-                                href="http://www.vstu.ru/upload/sveden/document/Pril1_licen_VSTU_07.10.16.pdf">
-                                <semibold>лицензия <i style="font-size: 2rem;" class="icon-attach"></i></semibold>
-                            </a> для обучения взрослых и детей (стр. 11). </p>
-                    </div>
-                </div>
-
+                <img src="media/questions.svg" alt="">
             </div>
         </div>
-
     </section>
+
+    <section class="contacts">
+        <div class="container contacts__inner">
+            <iframe
+                src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad052e78156846c8a92d869fcec3cf12dc4b6c8f0663fa9493b0f392d0be683ee&amp;source=constructor"
+                width="758" height="493" frameborder="0"></iframe>
+            <div class="contacts__text">
+                <h2>Контакты</h2>
+                <p>
+                    <bold>Вы можете найти нас по адресу:</bold><br>
+                    ВолгГТУ, Высотный корпус (В), 14 этаж, ауд 1402-2
+                    г. Волгоград, просп. им. В.И. Ленина, 28А
+                </p>
+                <p>
+                    <bold>Телефон</bold>: 8 (8442) 24-84-92
+                </p>
+                <p>
+                    <bold>E-mail</bold>: cad@vstu.ru
+                </p>
+                <div class="contacts__buttons">
+                    <a target="_blank" href="https://vk.com/robofabrica">
+                        <button class="button"><i class="icon-vk"></i><span>ЦДОД:РобоФабрика</span></button>
+                    </a>
+                    <a target="_blank" href="https://vk.com/cmit_lux">
+                        <button class="button"><i class="icon-vk"></i><span>ЦМИТ «ЛЮКС»</span></button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>Центр Дополнительного Образования Детей
+                <br>
+                кафедры САПРиПК
+                <br>
+                и Центра молодежного инновационного творчества "ЛЮКС",
+                <br>
+                ВолгГТУ
+            </p>
+            <p>© 2017-2021</p>
+        </div>
+    </footer>
 
 
     <script src="script.js"></script>
