--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="header__nav">
             <a href="#whoweare">О НАС</a>
             <a href="#courses">КУРСЫ</a>
-            <a href="#">ВИДЕО</a>
-            <a href="#">КОМАНДА</a>
-            <a href="#">FAQ</a>
-            <a href="#">КОНТАКТЫ</a>
+            <a href="#videos">ВИДЕО</a>
+            <a href="#team">КОМАНДА</a>
+            <a href="#faq">FAQ</a>
+            <a href="#contacts">КОНТАКТЫ</a>
         </div>
 
         <button class="button header__auth">
@@ -197,7 +197,7 @@
         </div>
     </section>
 
-    <section class="videos">
+    <section class="videos" id="videos">
         <div class="container videos__inner">
             <h2>Ждём Вас на наших занятиях!</h2>
             <!-- width="560" height="315" -->
@@ -220,7 +220,7 @@
 
 
 
-    <section class="team">
+    <section class="team" id="team">
         <div class="container team__inner">
             <h2>Команда</h2>
             <p>В нашей команде энергичные и целеустремленные профессионалы своего дела, использующие творческий подход и
@@ -260,7 +260,7 @@
     </section>
 
 
-    <section class="faqq">
+    <section class="faqq" id="faq">
         <div class="container faqq__inner">
 
             <h2>Часто задаваемые вопросы</h2>
@@ -390,7 +390,7 @@
         </div>
     </section>
 
-    <section class="contacts">
+    <section class="contacts" id="contacts">
         <div class="container contacts__inner">
             <iframe
                 src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad052e78156846c8a92d869fcec3cf12dc4b6c8f0663fa9493b0f392d0be683ee&amp;source=constructor"
