--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -41,22 +41,22 @@
 
     </header>
 
-    <section class="container sec__main">
-        <div class="sec__main__left">
-            <h1 class="sec__main__title bold">
+    <section class="container main">
+        <div class="main__left">
+            <h1 class="main__title bold">
                 <span>Ц</span>ентр
                 <span>Д</span>ополнительного
                 <br>
                 <span>О</span>бразования
                 <span>Д</span>етей
             </h1>
-            <p class="sec__main__line" style="width: 50%"></p>
-            <p class="sec__main__desc">при кафедре САПРиПК <br> и ЦМИТ «ЛЮКС», ВолгГТУ</p>
-            <p class="sec__main__slog semibold">Изобретай будущее с нами!</p>
-            <p class="sec__main__line" style="width: 35%"></p>
+            <p class="main__line" style="width: 50%"></p>
+            <p class="main__desc">при кафедре САПРиПК <br> и ЦМИТ «ЛЮКС», ВолгГТУ</p>
+            <p class="main__slog semibold">Изобретай будущее с нами!</p>
+            <p class="main__line" style="width: 35%"></p>
             <button class="button"><span>Записаться</span></button>
         </div>
-        <img class="sec__main__right" src="media/main_classroom.svg" alt="">
+        <img class="main__right" src="media/main_classroom.svg" alt="">
     </section>
 
     <section class="whoweare" id="whoweare">
@@ -202,15 +202,15 @@
             <h2>Ждём Вас на наших занятиях!</h2>
             <!-- width="560" height="315" -->
             <div class="videos__items">
-                <iframe class="ytvideo" src="https://www.youtube.com/embed/4czkauoI5KQ" title="YouTube video player"
+                <iframe class="ytvideo ratio16_9" src="https://www.youtube.com/embed/4czkauoI5KQ" title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-                <iframe class="ytvideo" src="https://www.youtube.com/embed/k5d6el1VYCY" title="YouTube video player"
+                <iframe class="ytvideo ratio16_9" src="https://www.youtube.com/embed/k5d6el1VYCY" title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-                <iframe class="ytvideo" src="https://www.youtube.com/embed/OFW7cGD3dOI" title="YouTube video player"
+                <iframe class="ytvideo ratio16_9" src="https://www.youtube.com/embed/OFW7cGD3dOI" title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -227,7 +227,7 @@
                 обладающие нестандартным мышлением, обширными практическими знаниями и опытом работы в различных
                 отраслях программирования, гейм-дизайна, робо-инженерии и искуственного интеллекта.</p>
             <div class="team__cards">
-                <div class="team__card">
+                <div class="team__card team__card_first">
                     <img src="media/team/Щербаков.jpg" alt="">
                     <p>Щербаков Максим Владимирович</p>
                     <p>д.т.н., директор ЦДОД, заведующий кафедрой САПРиПК</p>
@@ -244,7 +244,6 @@
                 </div>
             </div>
             <div class="team__cards">
-                
                 <div class="team__card">
                     <img src="media/team/Пеньковская.jpg" alt="">
                     <p>Пеньковская Анна Владимировна</p>
@@ -254,7 +253,7 @@
                     <img src="media/team/Козина.jpg" alt="">
                     <p>Козина Светлана Александровна</p>
                     <p>менеджер ЦДОД</p>
-                </div>~
+                </div>
             </div>
         </div>
     </section>
@@ -392,14 +391,15 @@
 
     <section class="contacts" id="contacts">
         <div class="container contacts__inner">
-            <iframe
+            <!-- width="758" height="493" -->
+            <iframe class="yamap ratio3_2"
                 src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad052e78156846c8a92d869fcec3cf12dc4b6c8f0663fa9493b0f392d0be683ee&amp;source=constructor"
-                width="758" height="493" frameborder="0"></iframe>
+                frameborder="0"></iframe>
             <div class="contacts__text">
                 <h2>Контакты</h2>
                 <p>
                     <bold>Вы можете найти нас по адресу:</bold><br>
-                    ВолгГТУ, Высотный корпус (В), 14 этаж, ауд 1402-2
+                    ВолгГТУ, Высотный корпус (В), 14 этаж, ауд 1404
                     г. Волгоград, просп. им. В.И. Ленина, 28А
                 </p>
                 <p>
