--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p class="main__desc">при кафедре САПРиПК <br> и ЦМИТ «ЛЮКС», ВолгГТУ</p>
             <p class="main__slog semibold">Изобретай будущее с нами!</p>
             <p class="main__line" style="width: 35%"></p>
-            <button class="button"><span>Записаться</span></button>
+            <button class="button subscribe"><span>Записаться</span></button>
         </div>
         <img class="main__right" src="media/main_classroom.svg" alt="">
     </section>
@@ -130,7 +130,7 @@
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button"><span>Подробнее</span></button>
-                        <button class="button2"><span>Записаться</span></button>
+                        <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
                 <div class="courses__card c__robo">
@@ -141,7 +141,7 @@
                     <p>с 8 до 15 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button"><span>Подробнее</span></button>
-                        <button class="button2"><span>Записаться</span></button>
+                        <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
                 <div class="courses__card c__3d">
@@ -152,7 +152,7 @@
                     <p>с 11 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button"><span>Подробнее</span></button>
-                        <button class="button2"><span>Записаться</span></button>
+                        <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button"><span>Подробнее</span></button>
-                        <button class="button2"><span>Записаться</span></button>
+                        <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
                 <div class="courses__card c__android">
@@ -179,7 +179,7 @@
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button"><span>Подробнее</span></button>
-                        <button class="button2"><span>Записаться</span></button>
+                        <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
                 <div class="courses__card c__2d">
@@ -190,7 +190,7 @@
                     <p>с 10 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button"><span>Подробнее</span></button>
-                        <button class="button2"><span>Записаться</span></button>
+                        <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
             </div>
@@ -399,11 +399,11 @@
                 <h2>Контакты</h2>
                 <p>
                     <bold>Вы можете найти нас по адресу:</bold><br>
-                    ВолгГТУ, Высотный корпус (В), 14 этаж, ауд 1404
+                    ВолгГТУ, Высотный корпус (В), 14 этаж, ауд 1404<br>
                     г. Волгоград, просп. им. В.И. Ленина, 28А
                 </p>
                 <p>
-                    <bold>Телефон</bold>: 8 (8442) 24-84-92
+                    <bold>Телефон</bold>: +7 (917) 848-32-20
                 </p>
                 <p>
                     <bold>E-mail</bold>: cad@vstu.ru
